// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render correctly 1`] = `
<input
  className="class"
  controlled={false}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  toutiao-selection-end={999}
  toutiao-selection-start={999}
  wechat-adjust-position={true}
  wechat-confirm-hold={false}
  wechat-confirm-type="done"
  wechat-cursor-spacing={0}
  wechat-hold-keyboard={false}
  wechat-placeholder-class="input-placeholder"
  wechat-selection-end={-1}
  wechat-selection-start={-1}
/>
`;

exports[`Input should have maxlength when PLATFORM is wechat or toutiao 1`] = `
<input
  className="class"
  controlled={false}
  disabled={false}
  focus={false}
  maxLength={140}
  onBlur={[Function]}
  onConfirm={[Function]}
  onFocus={[Function]}
  onInput={[Function]}
  password={false}
  toutiao-selection-end={999}
  toutiao-selection-start={999}
  type="text"
  wechat-adjust-position={true}
  wechat-confirm-hold={false}
  wechat-confirm-type="done"
  wechat-cursor-spacing={0}
  wechat-hold-keyboard={false}
  wechat-placeholder-class="input-placeholder"
  wechat-selection-end={-1}
  wechat-selection-start={-1}
/>
`;
